data/all_generated_tests/raw_wast_tests/block_StackCorruption_1938.wast
;; 9. **Test Description**: Create a complex `block` with mixed types of instructions (e.g., arithmetic followed by control flow instructions) that improperly manipulate the stack by leaving intermediate results unhandled.    - **Constraint Checked**: Ensures all intermediate results within a block are correctly managed and the stack remains balanced throughout.    - **Relation to Stack Corruption**: Mismanaged intermediate stack states can cause cumulative stack corruption affecting subsequent operations and nested blocks.

(assert_invalid
  (module (func $block-stack-manipulation (result i32)
    (block (result i32) 
      (i32.const 10)
      (i32.const 20)
      (i32.add)
      (br 0)
      (i32.const 5)
    )
  ))
  "type mismatch"
)